compiler/testData/diagnostics/tests/UnderscoreUsageInAnnotation.kt
package test

annotation class `__`(val value: String)

@<!UNDERSCORE_USAGE_WITHOUT_BACKTICKS!>__<!>("") class TestAnn
@`__`("") class TestAnn2